--- a/data/travel_locative_001.yaml
+++ b/data/travel_locative_001.yaml
@@ -2,10 +2,10 @@ theme: travel
 category: cases
 tasks:
 - id: 13335499603670830146
-  sentence: Čitamo zanimljivu knjigu o drevnim gradovima.
-  sentence_en: We read an interesting book about ancient cities.
-  sentence_ru: Мы читаем интересную книгу о древних городах.
-  masked_sentence: Čitamo zanimljivu knjigu o ***** *****. *\(plural\)*
+  task: Čitamo zanimljivu knjigu o drevnim gradovima.
+  info:
+  - Мы читаем интересную книгу о древних городах.
+  masked_task: Čitamo zanimljivu knjigu o ***** *****. *\(plural\)*
   correct: drevnim gradovima
   base: drevni gradovi
   base_ru: древние города
@@ -15,8 +15,14 @@ tasks:
   - name: Число
     value: plural
   - name: Падеж
-    value: 'locative. Использование: используется с предлогом ''о'' для выражения
-      тем'
+    value: locative
+  - name: Использование падежа
+    value: используется с предлогом 'о' для выражения тем
+  filters:
+  - name: Падеж
+    value: locative
+  - name: Тема
+    value: travel
   wrong_answers:
   - drevne gradove
   - drevnih gradova
@@ -24,10 +30,10 @@ tasks:
   - drevnima gradovima
   - drevno gradovi
 - id: 13026069662146584378
-  sentence: Devojčica mašta o avanturama u starom zamku.
-  sentence_en: The girl dreams of adventures in an old castle.
-  sentence_ru: Девочка мечтает об авантюрах в старом замке.
-  masked_sentence: Devojčica mašta o avanturama u ***** *****.
+  task: Devojčica mašta o avanturama u starom zamku.
+  info:
+  - Девочка мечтает об авантюрах в старом замке.
+  masked_task: Devojčica mašta o avanturama u ***** *****.
   correct: starom zamku
   base: stari zamak
   base_ru: старый замок
@@ -37,8 +43,15 @@ tasks:
   - name: Число
     value: singular
   - name: Падеж
-    value: 'locative. Использование: указывает на нахождение внутри чего-либо, используется
-      с предлогом ''у'' для вещей, внутри которых можно физически находиться'
+    value: locative
+  - name: Использование падежа
+    value: указывает на нахождение внутри чего-либо, используется с предлогом 'у'
+      для вещей, внутри которых можно физически находиться
+  filters:
+  - name: Падеж
+    value: locative
+  - name: Тема
+    value: travel
   wrong_answers:
   - stari zamak
   - starom zamaka
@@ -46,10 +59,10 @@ tasks:
   - starim zamkom
   - starom zamku
 - id: 3047612171007608437
-  sentence: Uživamo u pričama o hrabrim vitezovima u tamnim šumama.
-  sentence_en: We enjoy the stories about brave knights in dark forests.
-  sentence_ru: Мы наслаждаемся рассказами о храбрых рыцарях в темных лесах.
-  masked_sentence: Uživamo u ***** o hrabrim vitezovima u tamnim šumama. *\(plural\)*
+  task: Uživamo u pričama o hrabrim vitezovima u tamnim šumama.
+  info:
+  - Мы наслаждаемся рассказами о храбрых рыцарях в темных лесах.
+  masked_task: Uživamo u ***** o hrabrim vitezovima u tamnim šumama. *\(plural\)*
   correct: pričama
   base: priče
   base_ru: рассказы
@@ -59,8 +72,14 @@ tasks:
   - name: Число
     value: plural
   - name: Падеж
-    value: 'locative. Использование: описывает участие в деятельности, с предлогом
-      ''у'''
+    value: locative
+  - name: Использование падежа
+    value: описывает участие в деятельности, с предлогом 'у'
+  filters:
+  - name: Падеж
+    value: locative
+  - name: Тема
+    value: travel
   wrong_answers:
   - priči
   - priče
@@ -68,10 +87,10 @@ tasks:
   - pričom
   - pričama
 - id: 5893626291079883793
-  sentence: Putovali smo po čarobnim ostrvima i uživali u prirodi.
-  sentence_en: We traveled across magical islands and enjoyed nature.
-  sentence_ru: Мы путешествовали по волшебным островам и наслаждались природой.
-  masked_sentence: Putovali smo po ***** ***** i uživali u prirodi. *\(plural\)*
+  task: Putovali smo po čarobnim ostrvima i uživali u prirodi.
+  info:
+  - Мы путешествовали по волшебным островам и наслаждались природой.
+  masked_task: Putovali smo po ***** ***** i uživali u prirodi. *\(plural\)*
   correct: čarobnim ostrvima
   base: čarobna ostrva
   base_ru: волшебные острова
@@ -81,8 +100,15 @@ tasks:
   - name: Число
     value: plural
   - name: Падеж
-    value: 'locative. Использование: используется с предлогом ''по'' для выражения
-      движения, направленного к различным местам'
+    value: locative
+  - name: Использование падежа
+    value: используется с предлогом 'по' для выражения движения, направленного к различным
+      местам
+  filters:
+  - name: Падеж
+    value: locative
+  - name: Тема
+    value: travel
   wrong_answers:
   - čarobni ostrvu
   - čarobne ostrve
@@ -90,10 +116,10 @@ tasks:
   - čarobnih ostrva
   - čarobnom ostrvom
 - id: 3054763402570950308
-  sentence: Sanjali smo o letovanju u mirnim gradovima Italije.
-  sentence_en: We dreamt about vacationing in the peaceful cities of Italy.
-  sentence_ru: Мы мечтали об отпуске в мирных городах Италии.
-  masked_sentence: Sanjali smo o ***** u mirnim gradovima Italije.
+  task: Sanjali smo o letovanju u mirnim gradovima Italije.
+  info:
+  - Мы мечтали об отпуске в мирных городах Италии.
+  masked_task: Sanjali smo o ***** u mirnim gradovima Italije.
   correct: letovanju
   base: letovanje
   base_ru: летний отдых
@@ -103,8 +129,14 @@ tasks:
   - name: Число
     value: singular
   - name: Падеж
-    value: 'locative. Использование: указывает на предмет речи, мысли или эмоции,
-      с предлогом ''о'''
+    value: locative
+  - name: Использование падежа
+    value: указывает на предмет речи, мысли или эмоции, с предлогом 'о'
+  filters:
+  - name: Падеж
+    value: locative
+  - name: Тема
+    value: travel
   wrong_answers:
   - letovanji
   - letovanje
