--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,10 @@ tokio = { version = "1.12.0", features = ["full"] }
 log = "0.4.14"
 strum = { version = "0.25", features = ["derive"] }
 dotenv = "0.15.0"
+bytes = "1.1.0"
+prost = "0.12.3"
+base64 = "0.21.5"
+
+[build-dependencies]
+prost-build = "0.12.3"
 
