--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ dotenv = "0.15.0"
 bytes = "1.1.0"
 prost = "0.12.3"
 base64 = "0.21.5"
+time = "0.3.0"
 
 [build-dependencies]
 prost-build = "0.12.3"
