Large refactor + PG based implementation for state

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,12 @@ dotenv = "0.15.0"
 bytes = "1.1.0"
 prost = "0.12.3"
 base64 = "0.21.5"
-time = "0.3.0"
+time = "0.3.31"
+tokio-postgres = "0.7.2"
+sqlx = { version = "0.7.3", features = ["postgres", "time", "runtime-tokio", "migrate", "json"] } 
+testcontainers = "0.15.0"
+testcontainers-modules = { version = "0.2", features = ["postgres"] }
+libc = "0.2.102"
 
 [build-dependencies]
 prost-build = "0.12.3"
