--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ prost = "0.12.3"
 base64 = "0.21.5"
 time = "0.3.31"
 tokio-postgres = "0.7.2"
-sqlx = { version = "0.7.3", features = ["postgres", "time", "runtime-tokio", "migrate", "json"] } 
+sqlx = { version = "0.7.3", features = ["postgres", "time", "runtime-tokio", "migrate", "json", "tls-rustls"] } 
 testcontainers = "0.15.0"
-testcontainers-modules = { version = "0.2", features = ["postgres"] }
+testcontainers-modules = { version = "0.3.1", features = ["postgres"] }
 libc = "0.2.102"
 
 [build-dependencies]
